--- a/l10n_ro_stock_account_fifo/views/stock_valuation_layer_tracking.xml
+++ b/l10n_ro_stock_account_fifo/views/stock_valuation_layer_tracking.xml
@@ -4,10 +4,13 @@
         <record model="ir.ui.view" id="stock_valuation_layer_stock_move_line">
             <field name="name">stock.valuation.layer.tracking.form.view</field>
             <field name="model">stock.valuation.layer</field>
-            <field name="inherit_id" ref="stock_account.stock_valuation_layer_form"/>
+            <field name="inherit_id" ref="stock_account.stock_valuation_layer_form" />
             <field name="arch" type="xml">
             	<xpath expr="//field[@name='stock_move_id']" position="after">
-            		<field name="stock_move_line_id" attrs="{'invisible': [('stock_move_line_id', '=', False)]}"/>
+            		<field
+                        name="stock_move_line_id"
+                        attrs="{'invisible': [('stock_move_line_id', '=', False)]}"
+                    />
             	</xpath>
             </field>
         </record>
@@ -15,48 +18,48 @@
         <record model="ir.ui.view" id="stock_valuation_layer_tracking">
             <field name="name">stock.valuation.layer.tracking.form.view</field>
             <field name="model">stock.valuation.layer</field>
-            <field name="inherit_id" ref="stock_account.stock_valuation_layer_form"/>
+            <field name="inherit_id" ref="stock_account.stock_valuation_layer_form" />
             <field name="arch" type="xml">
             	<xpath expr="//page[@name='other_info']" position="after">
             		<page string="Source SVL" name="source_svl">
-                        <label for="svl_track_src_ids"/>
+                        <label for="svl_track_src_ids" />
             			<field name="svl_track_src_ids" readonly="1">
             				<tree>
-            					<field name="create_date"/>
-            					<field name="svl_src_id"/>
-            					<field name="quantity" sum="Total Quantity"/>
-            					<field name="value" sum="Total Value"/>
+            					<field name="create_date" />
+            					<field name="svl_src_id" />
+            					<field name="quantity" sum="Total Quantity" />
+            					<field name="value" sum="Total Value" />
             				</tree>
             			</field>
-                        <label for="svl_src_ids"/>
+                        <label for="svl_src_ids" />
             			<field name="svl_src_ids" readonly="1">
             				<tree>
-            					<field name="create_date"/>
-            					<field name="valued_type"/>
-            					<field name="quantity" sum="Total Quantity"/>
-            					<field name="unit_cost"/>
-            					<field name="value" sum="Total Value"/>
+            					<field name="create_date" />
+            					<field name="l10n_ro_valued_type" />
+            					<field name="quantity" sum="Total Quantity" />
+            					<field name="unit_cost" />
+            					<field name="value" sum="Total Value" />
             				</tree>
             			</field>
             		</page>
             		<page string="Destination SVL" name="destination_svl">
-                        <label for="svl_track_dest_ids"/>
+                        <label for="svl_track_dest_ids" />
             			<field name="svl_track_dest_ids" readonly="1">
             				<tree>
-            					<field name="create_date"/>
-            					<field name="svl_dest_id"/>
-            					<field name="quantity" sum="Total Quantity"/>
-            					<field name="value" sum="Total Value"/>
+            					<field name="create_date" />
+            					<field name="svl_dest_id" />
+            					<field name="quantity" sum="Total Quantity" />
+            					<field name="value" sum="Total Value" />
             				</tree>
             			</field>
-                        <label for="svl_dest_ids"/>
+                        <label for="svl_dest_ids" />
             			<field name="svl_dest_ids" readonly="1">
             				<tree>
-            					<field name="create_date"/>
-            					<field name="valued_type"/>
-            					<field name="quantity" sum="Total Quantity"/>
-            					<field name="unit_cost"/>
-            					<field name="value" sum="Total Value"/>
+            					<field name="create_date" />
+            					<field name="l10n_ro_valued_type" />
+            					<field name="quantity" sum="Total Quantity" />
+            					<field name="unit_cost" />
+            					<field name="value" sum="Total Value" />
             				</tree>
             			</field>
             		</page>
